# project_1

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/: main.py  settings.py
src/weather_api/: __init__.py  _api_client.py  _api_types.py  _exceptions.py  _methods.py
src/weather_api/tests/: test_client.py
